--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             
     </section><br>
     <section align="center">    
-        <video width="320" height="240" loop autoplay >
+        <video width="320" height="240" loop autoplay controls>
             <source src="videos/received_1819991308475299.mp4" type="video/mp4">
         </video>
         
-        <audio loop autoplay >
+        <audio loop autoplay controls>
             <source src="audios/yuhhh_6yUCDie.mp3" type="audio/mpeg">
         </audio>
     </section>
@@ -25,4 +25,5 @@
 </body>
 <footer><a href="https://bom.so/nf2G08" target="_blank" rel="noopener noreferrer">Boom boom girl</a></footer>
 </html>
+
 
